--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
      <script>
     tailwind.config = {
       theme: {
-        fontFamily:{
-            manrope: ['Manrope', 'sans-serif']
-
-        },
-        fontSize:{
-            '7xl' : '80px'
-        },
         extend: {
           colors: {
             clifford: '#da373d',
@@ -43,7 +36,7 @@
     <main class="max-w-7xl mx-auto px-16 lg:px-28">
     
     <!-- Header Section -->
-    <header class="flex pt-10 mb-20">
+    <header class="lg:flex pt-10 mb-20">
     <!-- Text Content -->
      <div>
         <h1 class="text-5xl font-bold md:text-7xl text-[#1C1C1C]">It's good<br> 
@@ -79,6 +72,45 @@
      </div>
     </header>
 
+    <!-- FEature Production Section -->
+
+    <section class="py-8 lg:py-24">
+      <!-- Title -->
+      <div class="text-center">
+        <h1 class="font-extrabold text-3xl md:text-4xl text-[#1C1C1C] mb-2">Our Featured Products</h1>
+        <p class="text-base text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br>
+          by injected humour, or randomised words which don't look even slightly believable.</p>
+      </div>
+
+      <!-- Product section -->
+
+      <div class="grid gird-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 pt-12 text-center">
+        <div class="rounded-xl bg-[#F4F4F4]">
+          <img class="mx-auto pt-4" src="./images/tea-1.png" alt="">
+          <h3 class=" text-2xl font-extrabold">Milk Tea</h3>
+          <p class=" text-base text-[#777777]">Creamer could be replaced by fresh milk</p>
+
+        </div>
+        <div class="rounded-xl bg-[#F4F4F4]">
+          <img class="mx-auto pt-4" src="./images/tea-2.png" alt="">
+          <h3 class="text-2xl font-extrabold">Black Tea</h3>
+          <p class="text-base text-[#777777]">Creamer could be replaced by fresh milk</p>
+
+        </div>
+        <div class="rounded-xl bg-[#F4F4F4]">
+          <img class="mx-auto pt-4" src="./images/tea-3.png" alt="">
+          <h3 class=" text-2xl font-extrabold">Lemon Tea</h3>
+          <p class="text-base  text-[#777777]">Creamer could be replaced by fresh milk</p>
+
+        </div>
+        <div class="rounded-xl bg-[#F4F4F4]">
+          <img class="mx-auto pt-4" src="./images/tea-4.png" alt="">
+          <h3 class=" text-2xl font-extrabold">Green Tea</h3>
+          <p class="text-base text-[#777777]">Creamer could be replaced by fresh milk</p>
+
+        </div>
+      </div>
+    </section>
 
     </main>
 
