--- a/index.html
+++ b/index.html
@@ -119,37 +119,111 @@
       <section class="mt-24">
         <div class="grid grid-cols-1 lg:grid-cols-2">
           <!-- image section -->
-           <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
-             <div class="h-38 bg-gradient-to-r from-red-400 to-red-200 rounded-xl"></div>
-             <div class="bg-[#e0cea5] rounded-xl row-span-2">
+          <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+            <div class="h-38 bg-gradient-to-r from-red-400 to-red-200 rounded-xl"></div>
+            <div class="bg-[#e0cea5] rounded-xl row-span-2">
               <img class="mx-auto my-5 " src="./images/fresh-1.png" alt="">
-             </div>
-
-             <div class="bg-[#e1daca] rounded-xl row-span-2">
-              <img class="mx-auto my-5 " src="./images/fresh-2.png" alt="">
-             </div>
-
-             <div class="h-38 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] rounded-xl">
-
-             </div>
-
-           </div>
-
-           <!-- Text section -->
-            <div>
-              <h1 class="font-extrabold text-4xl text-[#1C1C1C]">Great Tea, Freshly Presented</h1>
-              <p class="text-xs pt-4 pb-4 text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor <br> from all possessions . It represents the highest quality and self expectation. <br> Establishing in 2006, Gong cha had been deeply appreciated by its custoers <br> because of good words of mouth and unique customized service orginated <br> from Taiwan.</p>
-              <h3 class="font-extrabold pb-3 text-2xl text-[#1C1C1C]">unique Teste</h3>
-              <p class="text-xs pb-3 text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-              <h3 class="font-extrabold pb-3 text-2xl text-[#1C1C1C]">Premium quality</h3>
-              <p class="text-xs text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
             </div>
 
+            <div class="bg-[#e1daca] rounded-xl row-span-2">
+              <img class="mx-auto my-5 " src="./images/fresh-2.png" alt="">
+            </div>
+
+            <div class="h-38 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] rounded-xl">
+
+            </div>
+
+          </div>
+
+          <!-- Text section -->
+          <div>
+            <h1 class="font-extrabold text-4xl text-[#1C1C1C]">Great Tea, Freshly Presented</h1>
+            <p class="text-xs pt-4 pb-4 text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to
+              emperor <br> from all possessions . It represents the highest quality and self expectation. <br>
+              Establishing in 2006, Gong cha had been deeply appreciated by its custoers <br> because of good words of
+              mouth and unique customized service orginated <br> from Taiwan.</p>
+            <h3 class="font-extrabold pb-3 text-2xl text-[#1C1C1C]">unique Teste</h3>
+            <p class="text-xs pb-3 text-[#777777]">A Unique and different style from other teapots gives a luxurious and
+              minimalist impression</p>
+            <h3 class="font-extrabold pb-3 text-2xl text-[#1C1C1C]">Premium quality</h3>
+            <p class="text-xs text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use
+              it.</p>
+          </div>
+
         </div>
-    
-    
+
+
+      </section>
+
+
     </section>
 
+
+    <!-- Review Section -->
+    <section class="mb-24">
+      <div class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl
+       grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 text-white px-7 md:px-16">
+
+        <!-- Text Secion -->
+        <div class="flex justify-center items-center overflow-hidden">
+          <div class="w-5/6">
+            <h1 class="font-extrabold text-4xl mb-5 mt-10">Meet Our Super Clients</h1>
+            <p class="text-xs mb-5">There are many variations of passages of Lorem Ipsum available, but the majority
+              have suffered alteration in some form, by injected humour, or randomised words which don't look even
+              slightly believable. </p>
+            <button class="rounded-xl text-orange-700 bg-white py-2 px-3 ">Show All</button>
+          </div>
+        </div>
+
+        <!-- Review Card Section -->
+        <div class="relative py-24">
+
+           <div class="absolute z-10 md:top-52">
+            <div class="h-56 w-full bg-white text-black rounded-lg flex items-center px-5">
+            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+              <img class="p-1" src="./images/client.png" alt="">
+            </div>
+            <div class="pl-8">
+              <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the
+                people who are interested to treatment</p>
+              <h4 class="font-bold">Mehedi Hasan</h4>
+              <p class="text-gray-500">Programmer</p>
+
+            </div>
+
+          </div>
+          </div>
+          <!-- Top Card -->
+          <div class="relative  md:left-64 opacity-30 h-56 w-full bg-white text-black rounded-lg flex items-center px-5">
+            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+              <img class="p-1" src="./images/client.png" alt="">
+            </div>
+            <div class="pl-8">
+              <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the
+                people who are interested to treatment</p>
+              <h4 class="font-bold">Mehedi Hasan</h4>
+              <p class="text-gray-500">Programmer</p>
+
+            </div>
+
+          </div>
+
+          <!-- Bottom Card -->
+          <div
+            class="relative md:left-64 opacity-30 top-10 h-56 w-full  bg-white text-black rounded-lg flex items-center px-5">
+            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+              <img class="p-1" src="./images/client.png" alt="">
+            </div>
+            <div class="pl-8">
+              <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the
+                people who are interested to treatment</p>
+              <h4 class="font-bold">Mehedi Hasan</h4>
+              <p class="text-gray-500">Programmer</p>
+
+            </div>
+
+          </div>
+        </div>
 
     </section>
 
